--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+asn1crypto==0.24.0
 astroid==2.1.0
+attrs==18.2.0
+Automat==0.7.0
 beautifulsoup4==4.6.3
 boto3==1.9.65
 botocore==1.12.65
 cachetools==3.0.0
 certifi==2018.11.29
+cffi==1.11.5
 chardet==3.0.4
+constantly==15.1.0
+cryptography==2.4.2
+cssselect==1.0.3
 docutils==0.14
 google-api-core==1.6.0
 google-api-python-client==1.7.6
@@ -14,28 +21,44 @@ google-cloud-speech==0.36.0
 googleapis-common-protos==1.5.5
 grpcio==1.17.1
 httplib2==0.12.0
+hyperlink==18.0.0
 idna==2.7
+incremental==17.5.0
 isort==4.3.4
 jmespath==0.9.3
 lazy-object-proxy==1.3.1
+lxml==4.2.5
 mccabe==0.6.1
+mplayer.py==0.7.1
 nltk==3.4
 oauth2client==4.1.3
+parsel==1.5.1
 protobuf==3.6.1
 proxyscrape23==0.1.1
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 PyAudio==0.2.11
+pycparser==2.19
+PyDispatcher==2.0.5
+PyHamcrest==1.9.0
 pylint==2.2.2
+pyOpenSSL==18.0.0
+pyserial==3.4
 python-dateutil==2.7.5
 pytz==2018.7
+queuelib==1.5.0
 requests==2.20.1
 rsa==4.0
 s3transfer==0.1.13
+Scrapy==1.5.1
+service-identity==18.1.0
 singledispatch==3.4.0.3
 six==1.11.0
 SpeechRecognition==3.8.1
 textblob==0.15.2
+Twisted==18.9.0
 uritemplate==3.0.0
 urllib3==1.24.1
+w3lib==1.19.0
 wrapt==1.10.11
+zope.interface==4.6.0
